# KernelIDE

./: .gitignore  README.md  index.html  modal_executor.py  package-lock.json  package.json  test.py
.claude/: settings.local.json
kernelide-cli/: pyproject.toml
kernelide-cli/kernelide_cli/: cli.py
kernelide-vscode/: README.md  package-lock.json  package.json
kernelide-vscode/src/: SidebarProvider.ts  extension.ts
src/: App.tsx  index.css  store.ts  types.ts
src/components/: Editor.tsx  Header.tsx  OutputPanel.tsx  SettingsModal.tsx
src/services/: modal.ts
