[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kernelide"
version = "0.1.0"
description = "CLI for KernelIDE - submit GPU kernels from your terminal"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "click>=8.0",
    "requests>=2.28",
]

[project.scripts]
kernelide = "kernelide_cli.cli:cli"

[tool.setuptools.packages.find]
include = ["kernelide_cli*"]
